--- a/html/dwz_container.html
+++ b/html/dwz_container.html
@@ -2,7 +2,7 @@
 	<div id="sidebar_s"><i class="icon-reorder icon-large"></i></div>
 	<div id="sidebar">
 		<div id="menu">
-			<?cs include:config.cspath+"dwz_left_view.html" ?>
+			<?cs include:config.cspath+"dwz_left_attr.html" ?>
 		</div>
 	</div>
 </div>
@@ -11,16 +11,16 @@
 	<div class="tabsPageHeader">
 		<div class="tabsPageHeaderContent">
 			<ul class="navTab-tab">
-				<li tabid="main" class="main"><a href="javascript:;" onclick="return iconlse;"><i class="icon-home icon-large"></i> 主页</a></li>
+				<li tabid="main" class="main"><a href="javascript:;"><i class="icon-home icon-large"></i> 主页</a></li>
 			</ul>
 		</div>
-		<a href="javascript:;" onclick="return iconlse;" class="toggleCollapse"><i class="icon icon-chevron-sign-left icon-large"></i></a>
-		<a href="javascript:;" onclick="return iconlse;" class="tabsLeft"><i class="icon-backward icon-large"></i></a>
-		<a href="javascript:;" onclick="return iconlse;" class="tabsRight"><i class="icon-forward icon-large"></i></a>
-		<a href="javascript:;" onclick="return iconlse;" class="tabsMore"><i class="icon-th-list icon-large"></i></a>
+		<a href="javascript:;" class="toggleCollapse"><i class="icon icon-chevron-sign-left icon-large"></i></a>
+		<a href="javascript:;" class="tabsLeft"><i class="icon-backward icon-large"></i></a>
+		<a href="javascript:;" class="tabsRight"><i class="icon-forward icon-large"></i></a>
+		<a href="javascript:;" class="tabsMore"><i class="icon-th-list icon-large"></i></a>
 	</div>
 	<ul class="tabsMoreList">
-	    <li><a href="javascript:;" onclick="return iconlse;"><i class="icon-home icon-large"></i> 主页</a></li>
+	    <li><a href="javascript:;"><i class="icon-home icon-large"></i> 主页</a></li>
 	</ul>
 	<div class="navTab-panel tabsPageContent layoutBox">
 		<div class="page unitBox">
