--- a/html/dwz_left_plus.html
+++ b/html/dwz_left_plus.html
@@ -1,11 +1,11 @@
 <div class="accordion" fillSpace="sidebar">
 	<div class="accordionHeader">
-		<h2><i class="icon-check-sign icon-large"></i>监控扩展<i class="icon icon-chevron-up"></i></h2>
+		<h2><i class="icon-move icon-large"></i>监控扩展<i class="icon icon-chevron-up"></i></h2>
 	</div>
 	<div class="accordionContent">
-		<ul class="tree treeFolder">
-			<li><a href="<?cs var:config.cgipath?>mt_slog?action=open_plugin" target="navTab" rel="dmt_plugin_open">监控插件市场</a></li>
-			<li><a href="<?cs var:config.cgipath?>mt_slog?action=open_plugin" target="navTab" rel="dmt_open_source">相关源码</a></li>
+		<ul class="tree">
+			<li><a href="<?cs var:config.cgipath?>mt_slog?action=open_plugin" target="navTab" rel="dmt_plugin_open"><i class='icon-download-alt'></i>插件市场</a></li>
+			<li><a href="<?cs var:config.xrkmonitor_url ?>/monitor/dmt_open_source.html" target="navTab" rel="dmt_open_source"><i class='icon-code-fork'></i>相关源码</a></li>
 		</ul>
 	</div>
 </div>
