--- a/html/resource/dwz.frag.html
+++ b/html/resource/dwz.frag.html
@@ -8,7 +8,7 @@
 </ul>
 </textarea>
 
-<textarea id="mypluginCMIns">
+<textarea id="mypluginOpenIns">
 <ul id="mypluginCMIns">
 	<li rel="showinfo">查看</li>
 	<li rel="downconf">下载部署配置文件</li>
@@ -16,7 +16,6 @@
 </ul>
 </textarea>
 
-<_PAGE_ id="mypluginOpenUnIns"><![CDATA[
 <textarea id="mypluginOpenUnIns">
 <ul id="mypluginCMUnIns">
 	<li rel="showinfo_up">查看</li>
@@ -77,7 +76,11 @@
 <div id='background'></div>
 <div id='progressBar'>
     <i class="icon-spinner icon-spin"></i>
-</div></textarea>
+</div>
+<!-- rock add -->
+<div id='my_background' class='background'></div>
+<div id='my_progressBar' class='progressBar'><i class="icon-spinner icon-spin"></i>数据处理中, 请稍后...</div>
+</textarea>
 <!-- dwz.pagination -->
 <textarea id="pagination"><ul>
     <li class="j-first">
@@ -218,3 +221,5 @@
     <li rel="closeAll">关闭全部弹出窗口</li>
 </ul></textarea>
 <textarea id="externalFrag"><iframe src="{url}" style="width:100%;height:{height};" frameborder="no" border="0" marginwidth="0" marginheight="0"></iframe></textarea>
+
+
