--- a/html/dmt_master_page.html
+++ b/html/dmt_master_page.html
@@ -1,33 +1,3 @@
-<div class="pageHeader">
-    <form class="pagerForm" autocomplete="off" onsubmit="return navTabSearch(this);" method="post">
-        <div class="searchBar">
-            <ul class="searchContent accountInfo">
-                <li style='float:left; width:210px; margin-top:2px;'>
-					<p>
-						<font style="font-size:18px; font-style:italic">
-							&nbsp;&nbsp;--&nbsp;&nbsp;一切尽在掌握&nbsp;&nbsp;--
-						</font>
-					</p>
-                </li>
-
-				<li style='float:left; font-size:16px; font-weight:500; color:red; width:600px; overflow:hidden;'> 
-					<?cs if:config.notify_daemon ?>
-					<span id='dcNotifyMsg' style="font-size:16px; font-weight:500; color:red;"></span>
-					<?cs else ?>
-					<marquee onMouseOut='start();' onMouseOver='stop();' scrollamount="2" align='middle' id='dcNotifyMsg' loop=-1 behavior="alternate" style='text-decoration:underline;'></marquee>
-					<?cs /if ?>
-				</li>
-			</ul>
-
-			<div class='subBar'>
-				<ul>
-					<li><button type='button' class='buttonActive' id="dc_btn_hidden_tip" style='display:none'>不再显示当前消息</button></li>
-					<li><button type="button" class='buttonActive' id="dc_btn_refresh">刷新</button></li>
-				</ul>
-            </div>
-        </div>
-    </form>
-</div>
 
 <div class="pageContent" layoutH="28">
 	<div id='accountUseExp' style='width:300px; margin:15px 20px; float:left; height:300px;'>
@@ -85,6 +55,27 @@
 	<div id='mainChartAttr' class='mainPageChart'></div>
 	<div id='mainChartDisk' class='mainPageChart'></div>
 </div>
+
+<div class="pageHeader" style='padding:0px 0px; height:40px;'>
+    <div class="searchBar">
+        <ul class="searchContent accountInfo">
+			<li style='margin-left:10px; float:left; font-weight:500; color:red; width:600px; overflow:hidden;'> 
+				<?cs if:config.notify_daemon ?>
+				<span id='dcNotifyMsg' style="font-weight:500; color:red;"></span>
+				<?cs else ?>
+				<marquee onMouseOut='start();' onMouseOver='stop();' scrollamount="2" align='middle' id='dcNotifyMsg' loop=-1 behavior="alternate" style='text-decoration:underline;'></marquee>
+				<?cs /if ?>
+			</li>
+		</ul>
+		<div class='subBar' style='top:5px;'>
+			<ul>
+				<li><button type='button' class='buttonActive' id="dc_btn_hidden_tip" style='display:none'>不再显示当前消息</button></li>
+				<li><button type="button" class='buttonActive' id="dc_btn_refresh"><i class='icon-refresh icon-large'></i>刷新</button></li>
+			</ul>
+        </div>
+    </div>
+</div>
+
 
 <script language="javascript" type="text/javascript">
 var g_dcAppInfoAddr = 'local'; //'<?cs var:config.app_info_addr ?>';
@@ -469,4 +460,5 @@ function dcRefreshStatInfo()
 }
 
 </script>
+
 
