--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,17 +1,18 @@
 <a class="logo" href="#"><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
 <ul class="nav">
-	<li><a href="#" id='dh_init_change_pwd'><i class="icon-key icon-large"> 修改密码</i></a></li>
-	<li><a href="#" id="a_logout"><i class="icon-user icon-large"></i> <?cs var:comm.user_name ?></a></li>
-	<li><a href="logout.do?userId=2" title="退出登录"><i class="icon-signout icon-large"></i> 退出</a></li>
+	<li><a href="#" id='dh_init_change_pwd'><i class="icon-key icon-large"></i>修改密码</a></li>
+	<li><a href="#" id="a_logout"><i class="icon-user icon-large"></i><?cs var:comm.user_name ?></a></li>
+	<li><a href="logout.do?userId=2" title="退出登录"><i class="icon-signout icon-large"></i>退出</a></li>
 </ul>
 
 <ul id="navMenu">
 	<li class="selected"><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr">
-		<i class="icon-bar-chart icon-large"></i> 上报查看</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m"><i class="icon-cogs icon-large"></i> 上报管理</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-move icon-large"></i></i> 监控扩展</a></li>
+		<i class="icon-bar-chart icon-large"></i>上报查看</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m"><i class="icon-cogs icon-large"></i>上报管理</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-move icon-large"></i></i>监控扩展</a></li>
 	<?cs if:comm.user_type == 1 ?>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv"><i class="icon-cog icon-large"></i> 系统管理</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user"><i class="icon-group icon-large"></i>用户管理</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv"><i class="icon-cog icon-large"></i>系统配置</a></li>
 	<?cs /if ?>
 </ul>
 
