--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -3,12 +3,16 @@
 <?cs /if ?>
 
 <?cs if:config.xrkmonitor_debug==1 ?>
-<script src="<?cs var:config.docpath?>js/dmt.comm.js?v=110" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>js/dmt.comm.js?v=630" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery-1.9.1.min.js"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery.cookie.js"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery.validate.js"></script>
 <script src="<?cs var:config.docpath?>resource/js/jquery.bgiframe.js"></script>
-<script src="<?cs var:config.docpath?>resource/js/dwz.min.js?v=998"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.highlight-3.js"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.easing.1.3.js?v=1"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.json-2.3.js?v=1"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.md5.js?v=1"></script>
+<script src="<?cs var:config.docpath?>resource/js/dwz.min.js?v=3999"></script>
 <script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
 <script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
 <script src="<?cs var:config.docpath?>js/china.js"></script>
